# tauri-sqlite-poc

./: README.md  package.json  pnpm-lock.yaml
src/: App.tsx  style.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  setup.rs  yubi.rs
src/components/Decryptor/: Decryptor.tsx  style.scss
src/components/InputEncryptor/: InputEncryptor.tsx  style.scss
src/components/KeySelector/: KeySelector.tsx  style.scss
src/shared/: commands.ts
