[package]
name = "poc"
version = "0.0.0"
description = "A Tauri App"
authors = ["filipslezaklabs@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.18", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.23", features = [] }
tauri-plugin-shell = "2.0.0-beta.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-async-std", "tls-native-tls", "macros", "time", "json"] }
