[package]
name = "poc"
version = "0.0.0"
description = "A Tauri App"
authors = ["filipslezaklabs@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.18", features = [] }

[dependencies]
tauri = { version = "=2.0.0-beta.23", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-async-std", "tls-native-tls", "macros", "time", "json"] }
passwords = { version = "3.1.16" }
tauri-plugin-fs = "2.0.0-beta.10"
# yubikey integration
yubikey = {version = "0.8.0", features = ["untested"] }
rsa = "0.9.6"
pem = "3.0.4"
base64 = "0.22"
rand = "0.8"
tauri-specta = { git = "https://github.com/oscartbeaumont/tauri-specta", branch = "main", features = ["javascript", "typescript"] }
